src/styles/_settings.css
aside {
	position: fixed;
	top: 0;
	bottom: 0;
	z-index: 2;
	right: -450px;
	height: 100vh;
	min-width: 333px;
	width: 408px;
	padding: 0 21px;
	background-color: var(--color-settings);
	color: var(--color-text);
	font-size: 15px;
	font-weight: 400;
	text-shadow: none;
	text-align: initial;
	overflow-y: scroll;
	overflow-x: hidden;
	touch-action: pan-y;
	transition: transform 0.4s, background-color 0.4s cubic-bezier(0.215, 0.61, 0.355, 1);
}

aside.shown {
	-webkit-transform: translateX(-100%);
	transform: translateX(-100%);
	box-shadow: 0px 1px 20px 1px rgba(0, 0, 0, 0.15);
}

aside.init .as,
aside.init .dropdown {
	transition: max-height 0s;
}

aside.see-through {
	opacity: 0.2;
}

aside a {
	color: var(--color-blue);
	border-radius: 4px;
	text-decoration: none;
}

aside a:hover {
	text-decoration: underline;
}

aside hr {
	border: none;
	border-bottom: 1px solid var(--color-input);
	width: 100%;
}

aside h1,
aside h2,
aside span {
	margin: 0;
}

aside h2 {
	text-transform: uppercase;
	font-weight: 400;
	font-size: 0.8em;
	letter-spacing: 1px;
}

aside #hideelem button,
aside .uploadContainer,
aside #submitSave,
aside #i_refresh,
aside #cssEditor,
aside .tooltip,
aside .param,
aside select,
aside input,
aside hr {
	transition-duration: 0.4s;
	transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
	transition-property: background-color, color, border, border-color, transform;
}

aside .param-btn {
	height: 31px;
	padding: 0 1em;
	color: var(--color-blue);
	border: none;
	border-radius: 1em;
	background-color: rgba(var(--blue), 0.15);
	transition: background-color 0.1s, color 0.1s;
}

aside .param-btn:hover {
	background-color: rgba(var(--blue), 0.25);
}

aside .param-btn:hover.btn-red {
	color: var(--color-red);
	background-color: rgba(var(--red), 0.25);
}

aside .inline-btn {
	border-radius: 1em;
	color: var(--color-blue);
	background-color: transparent;
}

aside .inline-btn:hover {
	text-decoration: underline;
}

aside .input-btn {
	border-radius: 8px;
	text-decoration: none;
	color: var(--color-text);
	background-color: var(--color-input);
}

aside textarea,
aside .prism-code-editor,
#export-data {
	font-family: SF Mono, Consolas, Monaco, Andale Mono, Ubuntu Mono, monospace;
}

aside select,
aside input,
aside button {
	border-radius: 8px;
	color: var(--color-text);
	-webkit-appearance: none;
}

aside input,
aside select {
	height: 31px;
	width: 155px;
	padding-inline: 13px;
	overflow: hidden;
	text-overflow: ellipsis;
	background-color: var(--color-input);
}

aside input::placeholder {
	color: var(--color-placeholder);
}

aside input[type='checkbox'] {
	-webkit-tap-highlight-color: transparent;
	cursor: pointer;
}

aside .switch {
	position: relative;
	display: inline-block;
	height: 31px;
	width: 51px;
	margin: 0;
	border-radius: 16px;
	border: 2px solid transparent;
	background-color: var(--color-input);
	-webkit-appearance: none;
	-moz-appearance: none;
	appearance: none;
	overflow: visible
}

aside .switch:hover {
	background-color: var(--color-focused);
	transition: background-color 0.15s;
}

aside .switch:after {
	content: '';
	position: absolute;
	height: 27px;
	width: 27px;
	top: 0px;
	left: 0px;
	border-radius: 50%;
	box-shadow: 0px 1px 3px 2px rgba(20, 20, 20, 0.12);
	background-color: white;
	transition: background-color 0.3s, transform 0.3s;
}

aside .switch:checked {
	background-color: var(--color-green);
	transition: background-color 0.15s;
}

aside .switch:checked:hover {
	background-color: #40b354;
}

aside .switch:checked:after {
	transform: translateX(20px);
}

aside input::-webkit-calendar-picker-indicator {
	display: none !important;
}

aside input[type='range'] {
	position: relative;
	height: 2px;
	opacity: 1;
	margin: 0;
	padding: 0;
	cursor: grab;
	overflow: unset;
	border-radius: 1.5rem;
	background-color: #c8c7cc;
	-webkit-appearance: none;
	/* Firefox */
	/* Chrome, Opera & Safari */
	/*Edge*/
}

aside input[type='range']:active {
	cursor: grabbing;
}

aside input[type='range']::-moz-range-track {
	height: 2px;
	border-radius: 50px;
	background: #c8c7cc;
}

aside input[type='range']::-moz-range-progress {
	height: 2px;
	background-color: #c8c7cc;
}

aside input[type='range']::-moz-range-thumb {
	background: #fff;
	height: 20px;
	width: 20px;
	border-radius: 50px;
	border: 0;
	box-shadow: 0px 1px 3px 2px rgba(20, 20, 20, 0.12);
}

aside input[type='range']::-webkit-slider-thumb {
	-webkit-appearance: none;
	background: #fff;
	height: 20px;
	width: 20px;
	border: 0;
	border-radius: 50px;
	box-shadow: 0px 1px 3px 2px rgba(20, 20, 20, 0.12);
}

aside input[type='range']::-ms-thumb {
	margin: 0; /* Resets margin in Edge since it supports -webkit-slider-thumb as well */
}

aside input[type='range']::-ms-fill-lower {
	background: dodgerblue;
}

aside input[type='range']::-ms-thumb {
	background: #fff;
	border: 2px solid #999;
	height: 40px;
	width: 20px;
	box-sizing: border-box;
}

aside input[type='range']::-ms-ticks-after {
	display: none;
}

aside input[type='range']::-ms-ticks-before {
	display: none;
}

aside input[type='range']::-ms-track {
	background: #ddd;
	color: transparent;
	height: 40px;
	border: none;
}

aside input[type='range']::-ms-tooltip {
	display: none;
}

aside form {
	display: flex;
	position: relative;
	align-items: center;
	width: 155px;
}

aside form > div {
	display: flex;
	gap: 4px;
	width: 100%;
}

aside form button {
	height: 31px;
	width: 100%;
	padding: 0;
	opacity: 0;
	max-width: 0;
	background-color: transparent;
	transition: opacity 0.1s, max-width 0.2s;
}

aside form button:disabled {
	cursor: default;
}

aside form button span {
	justify-content: center;
}

aside form.valid button {
	opacity: 1;
	pointer-events: all;
	max-width: 26px;
	margin-left: 4px;
}

aside form.valid button:not(:disabled):hover,
aside form.valid button:not(:disabled):focus-visible {
	color: var(--color-blue);
	background-color: rgba(var(--blue), 0.15);
}
/* ... */

